Adding refresh button

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
     "CURRENT_TEMPERATURE": "Current temperature",
     "POPULATION": "Population",
-    "DATE": "Date"
+    "DATE": "Date",
+    "REFRESH": "Refresh"
 }
   
