--- a/src/assets/i18n/sl.json
+++ b/src/assets/i18n/sl.json
@@ -1,7 +1,8 @@
 {
     "CURRENT_TEMPERATURE": "Trenotna temperatura",
     "POPULATION": "Populacija",
-    "DATE": "Datum"
+    "DATE": "Datum",
+    "REFRESH": "Osvezi"
 }
   
   
